--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -13,8 +13,11 @@
     "axios": "^0.21.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.10",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "nodemon": "^2.0.7"
   }
 }
